# basis_universal

./: CMakeLists.txt  README.md
src/encoder/: CMakeLists.txt  lodepng.cpp
src/tool/: CMakeLists.txt  basisu_tool.cpp
src/transcoder/: CMakeLists.txt  basisu.h  basisu_transcoder.cpp
tool/: basisu_tool.cpp
transcoder/: basisu.h
